*Empty MediaWiki Message*

--- a/Толлорека_веле.mw
+++ b/Толлорека_веле.mw
@@ -2,7 +2,7 @@
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Толлорека веле
- |оригинальное название   ={{lang-krl|Tollonjoki}}
+ |оригинальное название   ={{lang-krl|Tollonjogi}}
  |изображение             =  
  |подчинение              = 
  |мастор                  = Россия
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Толлорека веле''' ({{lang-krl|Tollonjoki<ref name="Vuokkiniemi-Seura ry">[https://vuokkiniemiseura.wordpress.com/tag/capital-of-culture/ Vuokkiniemi-Seura ry. Vuokkiniemi will be a Finno-urgic Capital of Culture 2017] {{ref-en}}</ref><ref name="juminkeko"/>}}, {{Lang-ru|д. Толлорека}}) — те [[карелэть|карелэнь]] веле [[Костомукшань кужомастор|Костомукшань ошонь кужомасторсо]], [[Карелэнь Республикась|Карелэнь Республикань]].
+'''Толлорека веле''' ({{lang-fi|Tollonjoki<ref name="Vuokkiniemi-Seura ry">[https://vuokkiniemiseura.wordpress.com/tag/capital-of-culture/ Vuokkiniemi-Seura ry. Vuokkiniemi will be a Finno-urgic Capital of Culture 2017] {{ref-en}}</ref><ref name="juminkeko"/>}}, {{lang-krl|Tollonjogi}},  {{Lang-ru|д. Толлорека}}) — те [[карелэть|карелэнь]] веле [[Костомукшань кужомастор|Костомукшань ошонь кужомасторсо]], [[Карелэнь Республикась|Карелэнь Республикань]].
 
 == Веледенть ==
 Ашти [[Толлойоки]] лей чиресэ, [[Костомукша ош]] — [[Вокнаволок веле|Вокнаволок]] автоардомаванть лангсо.
