*Empty MediaWiki Message*

--- a/Толлорека_веле.mw
+++ b/Толлорека_веле.mw
@@ -30,7 +30,7 @@
  |община в таблице        = 
  |внутреннее деление      = 
  |вид главы               = 
- |глава                   = Лилия Веселова<ref>[http://www.kostomuksha-city.ru/main.phtml?m=106&lang=ru&path_link=adm_str14.phtml Администрация д. Вокнаволок]{{ref-ru}}</ref>
+ |глава                   = 
  |дата основания          = XVII пинге
  |первое упоминание       = 
  |прежние имена           = 
