--- a/Поньгагуба_веле.mw
+++ b/Поньгагуба_веле.mw
@@ -2,7 +2,7 @@
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Поньгагуба веле
- |оригинальное название   ={{lang-krl|Ponkalahti}}
+ |оригинальное название   ={{lang-krl|Pon’galahti}}
  |изображение             =  
  |подчинение              = 
  |мастор                  = Россия
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Поньгагуба веле''' ({{lang-krl|Ponkalahti<ref name="Vuokkiniemi-Seura ry">[https://vuokkiniemiseura.wordpress.com/tag/capital-of-culture/ Vuokkiniemi-Seura ry. Vuokkiniemi will be a Finno-urgic Capital of Culture 2017] {{ref-en}}</ref><ref name="juminkeko_Ponkalahti"/>}}, {{Lang-ru|д. Поньгагуба}}) — те [[карелэть|карелэнь]] веле [[Костомукшань кужомастор|Костомукшань ошонь кужомасторсо]], [[Карелэнь Республикась|Карелэнь Республикань]].
+'''Поньгагуба веле''' ({{lang-fi|Ponkalahti<ref name="Vuokkiniemi-Seura ry">[https://vuokkiniemiseura.wordpress.com/tag/capital-of-culture/ Vuokkiniemi-Seura ry. Vuokkiniemi will be a Finno-urgic Capital of Culture 2017] {{ref-en}}</ref><ref name="juminkeko_Ponkalahti"/>}}, {{lang-krl|Pon’galahti}}, {{Lang-ru|д. Поньгагуба}}) — те [[карелэть|карелэнь]] веле [[Костомукшань кужомастор|Костомукшань ошонь кужомасторсо]], [[Карелэнь Республикась|Карелэнь Республикань]].
 
 == Веледенть ==
 Ашти вирень эрьке лангсо, [[Вокнаволок веле|Вокнаволок]] — [[Калевала]] автоардомаванть лангсо. Велесь историянь ды шкинемань памятник, кона ашти Костомукшань ошонь кужомасторонть модасо<ref>[http://monuments.karelia.ru/ob-ekty-kul-turnogo-nasledija/spiski-ob-ektov-kul-turnogo-nasledija-po-rajonam-i-poselenijam-respubliki-karelija/g-kostomuksha/ Объекты культурного наследия на территории Костомукшского городского округа]{{ref-ru}}</ref>. Содави, кода '''рунаньморыця веле''', кона сюлмавозь [[Лённрот Элиас]]<ref name="juminkeko_Ponkalahti">[http://www.juminkeko.fi/viena/ponkalahti.html juminkeko//Ponkalahti] {{ref-fi}}</ref> марто, сон тия сёрмалесь [[«Калевала» морокерькс|Калевалас]] ламо рунатнень. 
