*Empty MediaWiki Message*

--- a/Ладвозеро_веле.mw
+++ b/Ладвозеро_веле.mw
@@ -2,7 +2,7 @@
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Ладвозеро веле
- |оригинальное название   ={{lang-krl|Latvajärvi}}
+ |оригинальное название   ={{lang-krl|Ladvujärvi}}
  |изображение             =  
  |подчинение              = 
  |мастор                  = Россия
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Ладвозеро веле''' ({{lang-krl|Latvajärvi<ref name="Vuokkiniemi-Seura ry">[https://vuokkiniemiseura.wordpress.com/tag/capital-of-culture/ Vuokkiniemi-Seura ry. Vuokkiniemi will be a Finno-urgic Capital of Culture 2017] {{ref-en}}</ref><ref name="juminkeko_Latvajärvi"/>}}, {{Lang-ru|д. Поньгагуба}}) — те [[карелэть|карелэнь]] веле [[Костомукшань кужомастор|Костомукшань ошонь кужомасторсо]], [[Карелэнь Республикась|Карелэнь Республикань]].
+'''Ладвозеро веле''' ({{lang-fi|Latvajärvi<ref name="Vuokkiniemi-Seura ry">[https://vuokkiniemiseura.wordpress.com/tag/capital-of-culture/ Vuokkiniemi-Seura ry. Vuokkiniemi will be a Finno-urgic Capital of Culture 2017] {{ref-en}}</ref><ref name="juminkeko_Latvajärvi"/>}}, {{lang-krl|Ladvujärvi}}, {{Lang-ru|д. Поньгагуба}}) — те [[карелэть|карелэнь]] веле [[Костомукшань кужомастор|Костомукшань ошонь кужомасторсо]], [[Карелэнь Республикась|Карелэнь Республикань]].
 
 == Веледенть ==
 Ашти [[Лембе ёнкс|лембе]]-[[чивалгома]]нь ёнкссо [[Алце Ладво эрьке]]нть чиресэ. Веленть калмазырьсэ калмазь содавиксэвть карелэнь рунаньморыцятне Перттуненень Архиппа ды сонзэ цёразо Мийхкали. Неть калмотне — историянь ды шкинемань памятникть, конатат аштить Костомукшань ошонь кужомасторонть модасо<ref>[http://monuments.karelia.ru/ob-ekty-kul-turnogo-nasledija/spiski-ob-ektov-kul-turnogo-nasledija-po-rajonam-i-poselenijam-respubliki-karelija/g-kostomuksha/ Объекты культурного наследия на территории Костомукшского городского округа]{{ref-ru}}</ref>. Те '''рунаньморыця веле''', кона сюлмавозь [[Лённрот Элиас]]<ref name="juminkeko_Latvajärvi">[http://www.juminkeko.fi/viena/latvajarvi.html juminkeko//Latvajärvi] {{ref-fi}}</ref> марто, сон тесэ  сёрмалесь [[«Калевала» морокерькс|Калевалас]] ламо рунатнень Архиппа Перттунен эйстэ. 
