*Empty MediaWiki Message*

--- a/Костомукша_ош.mw
+++ b/Костомукша_ош.mw
@@ -2,7 +2,7 @@
  |статус                  = Ош
  |Эрзянь лем              = Костомукша
  |оригинальное название   ={{lang-krl|Koštamuš}},<br/> {{lang-fi|Kostamus}}, <br/>{{lang-vep|Kostamukš}}<br/>
- |изображение             = 
+ |изображение             = KontuvaaraKostamus01.JPG
  |подчинение              = 
  |мастор                  = Россия
  |герб                    = 
@@ -30,10 +30,10 @@
  |внутреннее деление      = 
  |вид главы               = муниципальной пурнавксонть прявт 
  |глава                   = Бендикова Анна<ref>[http://www.gov.karelia.ru/gov/Regions/kostomuksha.html Карелия официальная. Костомукшский городской округ]</ref>
- |дата основания          = 1983  ие
+ |дата основания          = 1977 ие
  |первое упоминание       = 
  |прежние имена           = 
- |статус с                = 
+ |статус с                = 1983  ие
  |покшолмазо              = 
  |вид высоты              = 
  |высота центра НП        =
@@ -59,6 +59,11 @@
  |язык сайта              = ru
 }}
 '''Костомукша'''  ({{lang-krl|Koštamuš}}, {{lang-fi|Kostamus}}, {{lang-vep|Kostamukš}}) — те ош [[1983]] иестэ, Россиясо, [[Карелэнь Республикась|Карелиясо]].
+
+
+Эрицятнеде — 29 511<ref name="Численность населения"/> лом. (2016).  [[Костомукшань кужомастор|Костомукшань ошонь кужонть]] администрациянь куншка тарка. Костомукша — колмоце эрицятнень коряс Карелиясо.
+
+Ошонть эйстэ [[Петроской ош|Петроской]] видс — 490 [[вайгельпе|вп]], [[Ине-Петрань ош|Ине-Петрань]] видс — 930 вп.  [[Россиянь-суоминь граница]]сто — 30 вп (омбомасторонь автоардомань нолдамо пункт [[Люття (МАПП)|Люття-Вартиус]]).
 
 == Лисьм.: ==
 <references />
