*Empty MediaWiki Message*

--- a/Кигинэнь_буе.mw
+++ b/Кигинэнь_буе.mw
@@ -16,7 +16,7 @@
  | CoordScale                     = 
  | Статус                         = [[Муниципальной буе]]
  | Ашти                           = [[Башкирия Республикась|Башкириясо]]
- | Включает                       = 9 велеть
+ | Включает                       = 9 велень администрацият
  | Прявтош                        =  [[Верхние Киги]]  веле
  | Образование                    = [[1930 ие]]
  | Упразднение                    = 
@@ -36,7 +36,7 @@
  | Почтовые индексы               = 
  | Интернет-домен                 = 
  | Код автомобильных номеров      =02, 102
- | Сайт                           = http://adm-bizhbulyak.ru/] 
+ | Сайт                           = http://www.kigiadm.ru 
  | Категория в Commons            = 
  | Примечания                     = 
  | Название параметра1            = [[ОКАТО]]
