*Empty MediaWiki Message*

--- a/Мечетлинэнь_буе.mw
+++ b/Мечетлинэнь_буе.mw
@@ -17,7 +17,7 @@
  | Статус                         = [[Муниципальной буе]]
  | Ашти                           = [[Башкирия Республикась|Башкириясо]]
  | Включает                       = 12 велень администрацият
- | Прявтош                        =  [[Большеустьикинское]]  веле
+ | Прявтош                        =  [[Большеустьикинской (Башкирия)|Большеустьикинской]] веле
  | Образование                    = [[1930 ие]]
  | Упразднение                    = 
 |Глава                            = 
@@ -45,7 +45,7 @@
 
 '''Мечетлинэнь буе''' ({{lang-ru|Мечетлинский район}}, {{lang-ba|Мәсетле районы}}) — те буе лембе-чивалгома ёно [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
 
-Куншка ошось - [[Большеустьикинское]] веле. 
+Куншка ошось - [[Большеустьикинской (Башкирия)|Большеустьикинской]] веле. 
 == Эриця раськеть==
 {{Эрицятне | Мечетлинский район }}
 
