*Empty MediaWiki Message*

--- a/Толлорека_веле.mw
+++ b/Толлорека_веле.mw
@@ -1,4 +1,3 @@
-<br />
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Толлорека веле
@@ -53,8 +52,8 @@
  |почтовый индекс         = 186930
  |почтовые индексы        = 
  |автомобильный код       = 10
- |вид идентификатора      = 
- |цифровой идентификатор  = 86406000007
+ |вид идентификатора      = ОКАТО
+ |цифровой идентификатор  = {{ОКАТО|86406000007}}
  |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
