/* Эрицятнеде */ ЛопаПарцун:Эрицятне

--- a/Толлорека_веле.mw
+++ b/Толлорека_веле.mw
@@ -66,16 +66,7 @@
 
 
 == Эрицятнеде ==
-{|class="wikitable sortable"
-|-
-! scope="col" style="width:50px;"|'''2009<ref name="Рекомендуемая нормативная">[http://metod.library.karelia.ru/files/normy_bibliotek.pdf Рекомендуемая нормативная сеть и формы библиотечного обслуживания с указанием численности населения на 1 января 2009 года по данным Карелиястата.] {{ref-ru}}</ref>''' 
-! scope="col" style="width:50px;"|'''2010<ref name="Всероссийская перепись">[http://krl.gks.ru/wps/wcm/connect/rosstat_ts/krl/resources/dda916004ee2886182b1833467c8ff84/2_Сельские+населенные+пункты+РК.docx Всероссийская перепись населения 2010 года. Сельские населённые пункты Республики Карелия] {{ref-ru}}</ref>''' 
-! scope="col" style="width:50px;"|'''2013<ref name="Численность населения"/>''' 
-|-
-| scope="row" |2
-|→2
-|→2
-|}
+{{Эрицятне|Толлорека|Столбцов=6}}
 
 == Веленть лемденть  ==
 
