*Empty MediaWiki Message*

--- a/Кигинэнь_буе.mw
+++ b/Кигинэнь_буе.mw
@@ -43,9 +43,12 @@
  | Параметр1                      = {{ОКАТО|}}
 }}
 
-'''Кининэнь буе''' ({{lang-ru|Кигинский район}}, {{lang-ba|Ҡыйғы районы}}) — те буе лембе-чивалгома ёно [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
+'''Кининэнь буе''' ({{lang-ru|Кигинский район}}, {{lang-ba|Ҡыйғы районы}}) — те буе пелеве-чивалгома ёно [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
 
 Куншка ошось - [[Верхие Киги]] веле. 
+
+Шабрацек ашти [[Пелеве ёнкс|пелеве ёно]] [[Белокатаень буе|Белокатаень]], пелеве-[[Чивалгома|чивалагомасо]] — [[Мечетлинэнь буе|Мечетлинэнь]], [[Чилисема|чилисемасо]]  — [[Дуванонь буе|Дуванонь]], [[Лембе ёнкс|лембе ёно]] —  [[Салаватонь буе|Салаватонь]] буетнень, чилисема ёно —  [[Челябань ёнкс]] марто. Буенть покшолмазо 1688 [[вайгельпе|вп]]².
+
 == Эриця раськеть==
 {{Эрицятне | Кигинский район }}
 {{Эрицятне| Кигинский район |график}}
