*Empty MediaWiki Message*

--- a/Заречный_(Карелия).mw
+++ b/Заречный_(Карелия).mw
@@ -1,4 +1,3 @@
-<br />
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Заречный
@@ -53,8 +52,8 @@
  |почтовый индекс         = 186931
  |почтовые индексы        = 
  |автомобильный код       = 10
- |вид идентификатора      = 
- |цифровой идентификатор  = 86406000003
+ |вид идентификатора      = ОКАТО
+ |цифровой идентификатор  = {{ОКАТО|86406000003}}
  |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
@@ -65,16 +64,7 @@
 Ашти [[Тюрюйоки]] леенть чиресэ, [[Костомукша ош]] — [[Надвоицы]] автоардомаванть лангсо.
 
 == Эрицятнеде == 
-{|class="wikitable sortable"
-|-
-! scope="col" style="width:50px;"|'''2009<ref name="Рекомендуемая нормативная">[http://metod.library.karelia.ru/files/normy_bibliotek.pdf Рекомендуемая нормативная сеть и формы библиотечного обслуживания с указанием численности населения на 1 января 2009 года по данным Карелиястата.] {{ref-ru}}</ref>''' 
-! scope="col" style="width:50px;"|'''2010<ref name="Всероссийская перепись">[http://krl.gks.ru/wps/wcm/connect/rosstat_ts/krl/resources/dda916004ee2886182b1833467c8ff84/2_Сельские+населенные+пункты+РК.docx Всероссийская перепись населения 2010 года. Сельские населённые пункты Республики Карелия] {{ref-ru}}</ref>''' 
-! scope="col" style="width:50px;"|'''2013<ref name="Численность населения"/>''' 
-|-
-| scope="row" |106
-|↗127
-|↗136
-|}
+{{Эрицятне|Заречный (Карелия)|Столбцов=6}}
 
 == Веленть лемденть  ==
 
