*Empty MediaWiki Message*

--- a/Мечетлинэнь_буе.mw
+++ b/Мечетлинэнь_буе.mw
@@ -36,7 +36,7 @@
  | Почтовые индексы               = 4525ХХ
  | Интернет-домен                 = 
  | Код автомобильных номеров      =02, 102
- | Сайт                           = 
+ | Сайт                           = http://www.mechetly.ru/
  | Категория в Commons            = 
  | Примечания                     = 
  | Название параметра1            = [[ОКАТО]]
