*Empty MediaWiki Message*

--- a/Белебеень_буе.mw
+++ b/Белебеень_буе.mw
@@ -43,7 +43,7 @@
  | Параметр1                      = {{ОКАТО|}}
 }}
 
-'''Белебеень буе''' ({{lang-ru|Белебе́евский райо́н}}, {{lang-ba|Бәләбәй районы}}) — те буе лембе-чивалгома ёно [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
+'''Белебеень буе''' ({{lang-ru|Белебе́евский райо́н}}, {{lang-ba|Бәләбәй районы}}) — те буе [[Башкирия Республикась|Башкириясо]], [[Россия Мастор|Россиясо]]. 
 
 Куншка ошось - [[Белебей ош]]. 
 == Эрицятне ==
