*Empty MediaWiki Message*

--- a/Белокатаень_буе.mw
+++ b/Белокатаень_буе.mw
@@ -24,6 +24,14 @@
   |Название главы                  = 
  |Глава2                           = 
   |Название главы2                 = Глава муниципального образования
+ |Эрицятне                         = {{Эрицятне | Белокатайский район | тс}}
+  |Год переписи                    = {{Эрицятне | Белокатайский район | г}}
+  |Процент от населения            = 
+  |Место по населению              = 
+  |Плотность                       = 
+  |Место по плотности              = 
+  |Национальный состав             = 
+  |Конфессиональный состав         = 
  | Карта                          = Location_of_Belokatayskiy_rayon_(Bashkortostan).svg
  | Размер карты                   = 
  | Карта административной единицы = 
