*Empty MediaWiki Message*

--- a/ЛопаПарцун:Регион.mw
+++ b/ЛопаПарцун:Регион.mw
@@ -71,7 +71,7 @@
                         | Официальные языки}}
 |data15    = {{{Кельть|}}}{{{Кель|}}}
 
-|label16    = Эрицятне{{#if: {{{Год переписи|}}} | &nbsp;([[{{{Год переписи}}}]])}}{{#if: {{{Место по населению|}}} | <br/> | {{#if: {{{Процент от населения|}}} | <br/>}} }}
+|label16    = Эрицятне{{#if: {{{Год переписи|}}} | &nbsp;([[{{{Год переписи}}} ие]])}}{{#if: {{{Место по населению|}}} | <br/> | {{#if: {{{Процент от населения|}}} | <br/>}} }}
 |data16    = {{#if: {{{Эрицятне|}}} | {{#invoke:Lang|formatNum|{{{Эрицятне}}}}}{{#if: {{{Место по населению|}}} | &nbsp;( | {{#if: {{{Процент от населения|}}} | <br />(}} }}{{#if: {{{Процент от населения|}}} | {{#invoke:Lang|formatNum|{{{Процент от населения}}}}}&nbsp;%}}{{#if: {{{Место по населению|}}} | {{#if: {{{Процент от населения|}}} | ,&nbsp;}}{{{Место по населению}}}-е&nbsp;место}}{{#if: {{{Место по населению|}}} | ) | {{#if: {{{Процент от населения|}}} | )}} }} }}
 
 |label17    = Плотность
