--- a/ЛопаПарцун:Регион%2Fdoc.mw
+++ b/ЛопаПарцун:Регион%2Fdoc.mw
@@ -195,7 +195,7 @@
  |Кель                             = 
  |Кельть                           = Английский, испанский
  |Эрицятне                         = 210&nbsp;255 (около 380&nbsp;000 с близлежащей областью)
-  |Год переписи                    = 2006 ие
+  |Год переписи                    = 2006
   |Процент от населения            = 
   |Место по населению              = 4
   |Плотность                       = 
@@ -257,7 +257,7 @@
  |Язык                             = 
  |Языки                            = Английский, испанский
  |Население                        = 210&nbsp;255 (около 380&nbsp;000 с близлежащей областью)
-  |Год переписи                    = 2006 ие
+  |Год переписи                    = 2006
   |Процент от населения            = 
   |Место по населению              = 4
   |Плотность                       = 
