*Empty MediaWiki Message*

--- a/Мечетлинэнь_буе.mw
+++ b/Мечетлинэнь_буе.mw
@@ -24,6 +24,14 @@
   |Название главы                  = 
  |Глава2                           = 
   |Название главы2                 = Глава муниципального образования
+ |Эрицятне                         = {{Эрицятне | Мечетлинский район | тс}}
+  |Год переписи                    = {{Эрицятне | Мечетлинский район | г}}
+  |Процент от населения            = 
+  |Место по населению              = 
+  |Плотность                       = 
+  |Место по плотности              = 
+  |Национальный состав             = 
+  |Конфессиональный состав         = 
  | Карта                          = Location of Mechetlinskiy rayon (Bashkortostan).svg
  | Размер карты                   = 
  | Карта административной единицы = 
