--- a/Башкирия_Республикась.mw
+++ b/Башкирия_Республикась.mw
@@ -56,7 +56,7 @@ MSKS=+2|
 # [[Белокатаень буе|Белокатаень]]
 # [[Белорецэнь буе|Белорецэнь]]
 # [[Бижбуляконь буе|Бижбуляконь]]
-# [[Бирскоень буе|Бирскоень]]
+# [[Бирскоень буе (Башкирия)|Бирскоень]]
 # [[Благоваронь буе|Благоваронь]]
 # [[Благовещэнань буе (Башкортостан)|Благовещэнань]]
 # [[Буздяконь буе|Буздякяконь]]
