*Empty MediaWiki Message*

--- a/Бирскоень_буе_(Башкирия).mw
+++ b/Бирскоень_буе_(Башкирия).mw
@@ -16,7 +16,7 @@
  | CoordScale                     = 
  | Статус                         = [[Муниципальной буе]]
  | Ашти                           = [[Башкирия Республикась|Башкириясо]]
- | Включает                       = 12 велень администрацият
+ | Включает                       = 
  | Прявтош                        =  [[Бирской (Башкирия)|Бирской]] ош
  | Образование                    = [[1930 ие]]
  | Упразднение                    = 
