*Empty MediaWiki Message*

--- a/Аннань_буе_(Воронежень_ёнкс).mw
+++ b/Аннань_буе_(Воронежень_ёнкс).mw
@@ -24,6 +24,14 @@
   |Название главы                 = Буень прявт
  |Глава2                          = 
   |Название главы2                = 
+ |Эрицятне                         = {{Эрицятне | Аннинский район | тс}}
+  |Год переписи                    = {{Эрицятне | Аннинский район | г}}
+  |Процент от населения            = 
+  |Место по населению              = 
+  |Плотность                       = 
+  |Место по плотности              = 
+  |Национальный состав             = 
+  |Конфессиональный состав         = 
  | Карта                          = Location of Anninsky District (Voronezh Oblast).svg
  | Размер карты                   = 
  | Карта административной единицы = 
@@ -43,3 +51,5 @@
  | Параметр1                      = {{ОКАТО|20202000}}
 }}
 '''Аннань буе''' ({{lang-ru|Аннинский район}}) ашти [[Воронежень ёнкс]]со. Прявтонь куншка - [[Анна (Воронежень ёнкс)|Анна]]
+== Эрицятне ==
+{{Эрицятне| Аннинский район}}
