--- a/Тумобуе.mw
+++ b/Тумобуе.mw
@@ -47,6 +47,8 @@
 == Географической аштема тарказо ==
 
 == Эрицят ==
+{{Эрицятне|Дубенский район}}
+{{Эрицятне|Дубенский район|график}}
 
 == Модамасторонь юрттнэ ==
 
