--- a/Тумобуе.mw
+++ b/Тумобуе.mw
@@ -24,6 +24,14 @@
   |Название главы                  = Администрациянь прявт
  |Прявт2                           = 
   |Название главы2                 = 
+ |Эрицятне                         = {{Эрицятне | Дубенский район | тс}}
+  |Год переписи                    = {{Эрицятне | Дубенский район | г}}
+  |Процент от населения            = 
+  |Место по населению              = 
+  |Плотность                       = 
+  |Место по плотности              = 
+  |Национальный состав             = 
+  |Конфессиональный состав         = 
  | Карта                          =  Location Dubyonsky District Mordovia.svg
  | Размер карты                   = 
  | Карта административной единицы = 
