*Empty MediaWiki Message*

--- a/Тумобуе.mw
+++ b/Тумобуе.mw
@@ -1,7 +1,7 @@
 {{Регион
  | Цвет1                          = {{Цвет|Россия}}
  | Эрзянь лем                     = Тумобуе
- | Эсьлем                         = {{lang-ru|Дубенский район Мордовии}}
+ | Эсьлем                         = {{lang-ru|Дубёнский район Мордовии}}
  | Герб                           = 
  | Коцт                           = 
  | Гимн                           = 
@@ -24,8 +24,8 @@
   |Название главы                  = Администрациянь прявт
  |Прявт2                           = 
   |Название главы2                 = 
- |Эрицятне                         = {{Эрицятне | Дубенский район | тс}}
-  |Год переписи                    = {{Эрицятне | Дубенский район | г}}
+ |Эрицятне                         = {{Эрицятне | Дубёнский район | тс}}
+  |Год переписи                    = {{Эрицятне | Дубёнский район | г}}
   |Процент от населения            = 
   |Место по населению              = 
   |Плотность                       = 
@@ -50,13 +50,13 @@
  | Название параметра1            = [[ОКАТО]]
  | Параметр1                      = {{ОКАТО|89216000000}}
 }}
-'''Ту́мобуе''' ({{lang-ru|Дубенский район Мордовии}}, {{lang-mdf|Дубёнкань аймак}}) — [[Мордовия Республикась|Мордовия республикань]] [[буе]].
+'''Ту́мобуе''' ({{lang-ru|Дубёнский район Мордовии}}, {{lang-mdf|Дубёнкань аймак}}) — [[Мордовия Республикась|Мордовия республикань]] [[буе]].
 
 == Географической аштема тарказо ==
 
 == Эрицят ==
-{{Эрицятне|Дубенский район}}
-{{Эрицятне|Дубенский район|график}}
+{{Эрицятне|Дубёнский район}}
+{{Эрицятне|Дубёнский район|график}}
 
 == Модамасторонь юрттнэ ==
 
