--- a/Саран_ош.mw
+++ b/Саран_ош.mw
@@ -39,8 +39,8 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 299 195<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
-  |год переписи           = 2014
+  |эрицятне               = {{Эрицятне| Саранск| тс}}
+  |год переписи           = {{Эрицятне| Саранск| г}}
   |плотность              = 
   |агломерация            = 
   |национальный состав    = [[рузт]], [[эрзят]], [[мокшот]], [[печкаст]]
@@ -66,7 +66,8 @@
 Течи Саран ошось — покш эрзянь ды мокшонь мазычинь-культурань куншка тарка.
 
 Эрицятнеде 299,1 тёж. ([[2014 ие]]), покшолмазо 71,5 [[Вайгельпе|вп²]]
-
+{{Эрицятне| Саранск}}
+{{Эрицятне| Саранск| график}}
 {| class="wikitable"
 |-
 ! Ие !! 1970  !! 1979 !! 1989  !! 2002 !! 2010
