--- a/Ицял_буе.mw
+++ b/Ицял_буе.mw
@@ -48,6 +48,8 @@
 Шабрацек ашти [[Обранонь ёнкс|Обран ёнксонть]] марто ([[Чивалгома|чивалгомань]] ды чивалгомань пелеве ёнкстнэва) ды Мордовиянь лия буетнень марто: [[Пелеве ёнкс|пелевеёнкссо]] — [[Покш Игнадбуе|Покш Игнадбуень]], чивалгомань пелеве ёнкссо — [[Орданьбуе|Ордатбуень]], чивалгома ёнкссо — [[Отяжбуе|Отяжбуень]], [[Чилисема|чилисемань]] чипеле (лембе) ёнксканть — [[Чаунзабуе|Чаунзань буень]], [[Лембе ёнкс|лембе ёнкска]] — [[Рамаданбуе|Рамаданонь]]. Буень масторонь покшолмазо 1265,8 [[Вайгельпе|вп]]<sup>2</sup>, чивалгома ёнксто [[чилисема]] ёнксов сравтови — 51 ''' [[Вайгельпе|вайгельпеть]]''', пелевеёнксто лембе ёнксов — 40 вп (км.). [[Ичалки]] ды [[Кемля (Ицял буе)|Кемля]] сюлмазь [[Саранскоень чугунка кинть]] марто (63 [[Вайгельпе|вп]])<br />
 
 == Эрицят ==
+{{Эрицятне| Ичалковский район}}
+{{Эрицятне| Ичалковский район| график}}
 
 == Модамасторонь юрттнэ ==
 Буесь ашти вирьпаксянь модамасторонь юртка омбоцень мореннонь валаня таркасо, пелевеёнкссо — пертьпельксэнть комплекстнэ човорязь вирень сыреаллювилень ды ведеэйень ало таркань.<br />
