*Empty MediaWiki Message*

--- a/Ицял_буе.mw
+++ b/Ицял_буе.mw
@@ -24,6 +24,14 @@
   |Название главы                  = Администрациянь прявт
  |Прявт2                           = 
   |Название главы2                 = 
+ |Эрицятне                         = {{Эрицятне | Ичалковский район | тс}}
+  |Год переписи                    = {{Эрицятне | Ичалковский район | г}}
+  |Процент от населения            = 
+  |Место по населению              = 
+  |Плотность                       = 
+  |Место по плотности              = 
+  |Национальный состав             = 
+  |Конфессиональный состав         = 
  | Карта                          =   Location Ichalkovsky District Mordovia.svg
  | Размер карты                   = 
  | Карта административной единицы = 
