*Empty MediaWiki Message*

--- a/Воронеж_ош.mw
+++ b/Воронеж_ош.mw
@@ -39,8 +39,8 @@
  |высота центра НП        = 154
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 1 014 610
-  |год переписи           = 2014
+  |эрицятне               = 
+  |год переписи           = 
   |плотность              = 
   |агломерация            = 
   |национальный состав    = 
@@ -62,5 +62,9 @@
  |add1                     = {{Ленинэнь орден|тип=ош}} {{Орден Отечественной войны 1 степени|тип=ош}}
 }}
 '''Воронеж ош''' ({{Lang-ru|Воронеж}}) — те [[Россия Мастор]]онть ошось, [[Воронежень ёнкс]]онь прявтошось. Ашти [[Воронеж лей|Воронеж леень]] чиретнесэ ды [[Дон лей|Дононь леень]] керш чиресэ. 
+== Эрицятне ==
+{{Эрицятне| Воронеж}}
+==Лисьм. ==
+<references />
 
 [[Категория:Россия Масторонть ошт|В]]
