--- a/Чи_(шкань_вал).mw
+++ b/Чи_(шкань_вал).mw
@@ -1,7 +1,7 @@
 {{Лия смустьтне|Чи (смустьтне)}}
-'''Чи''' — шканть юткине [[Чи-ве|чинь-венть]] [[Чилисема|чилисемасто]] [[Чивалгома|чивалгоманть]] видс. Чить седе покш эрямо ёжост невтить кода ломанть, истяяк [[Ракшат|ракшатнеяк]]. Ансяк улить истят ракшат, конатнень эрямонь ёрокчизе  невтеви [[Ве|веть]]. 
+'''Чи''' — [[Чи-ве|чинь-венть]] шканть юткине, [[Чилисема|чилисемасто]] [[Чивалгома|чивалгома]] видс. Чить седе покш эрямо ёжост невтить кода ломанть, истя [[Ракшат|ракшатнеяк]]. Ансяк улить истят ракшат, конатнень эрямонь ёрокчизе  невтеви [[Ве|веть]]. 
 
-Ломантне чить важодить, али тонавтнить, истяжо улить оймсема чить — сынь максозь ломантненень оймсеме. 
+Ломантне чить важодить, эли тонавтнить, истяжо улить оймсема чить — сынь максозь ломантненень оймсеме.
 
 == Валмеревкст ==
 * Тонавтозь ломанентень [[Чи (пертпельксень вал)|чиськак]]  седе валдо.
