--- a/Пусмопря_сапоньундокс.mw
+++ b/Пусмопря_сапоньундокс.mw
@@ -18,10 +18,12 @@
 
 Тикшенть ундоксозо [[1 (ловома вал)|вейке]], вишкине. Сонсь тикшесь пек рацяня, прок шар. Лопанзо овсе вишкинеть, цецянзо [[ашо|ашолат]]. Зярдо видьмензэ кенерить, весе курось сезеви ундокстонть, ды вармась пуви эйсэнзэ лия таркав. Курось кеверезь кевери. Кассы степсэ. Ловови ормадо лезэв тикшекс.
 
-
 == Тикшень лемтне ==
 [[Ицял буе|Ицял буень]] [[Полдаська (Ицял буе)|Полдаська]] велесэ мерить тензэ '''''вармань шалаж'''''.
 Лиякс мерить '''вармань крандаз<ref name="Тикшень валкс">Р.Н. Бузакова. Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2., {{ref-ru}},{{ref-myv}}</ref>'''.
+* ({{Lang-la|Gypsophila L.}}, {{Lang-ru|Качим}}) — '''[[сапоньундокс]]'''<ref name="Русско-эрзянский ботанический"/>
+* ({{Lang-la|Gypsophila muralis L.}}, {{Lang-ru|Качим степной}}) — '''[[чаво таркань сапоньундокс]]'''<ref name="Русско-эрзянский ботанический"/>
+
 
 ==Лисьм.:==
 <references />
