--- a/Сапоньундокс.mw
+++ b/Сапоньундокс.mw
@@ -23,7 +23,7 @@
 Вейке, ды ламоиень тикше. Вишкине. Сонсь тикшесь пек рацяня, прок шар. Лопанзо овсе вишкинеть, цецянзо вишкинькат: [[ашо|ашолат]], ашола-пижеть, розовойть.
 
 == Тикшень лемтне ==
-* ({{Lang-la|Gypsophila L.}}, {{Lang-ru|Качим}}) — '''[[сапоньундокс]]'''<ref name="Русско-эрзянский ботанический"/>
+* ({{Lang-la|Gypsophila muralis L.}}, {{Lang-ru|Качим степной}}) — '''[[чаво таркань сапоньундокс]]'''<ref name="Русско-эрзянский ботанический"/>
 * ({{Lang-la|[[Gypsophila paniculata]]}}, {{Lang-ru|Качим метельчатый}}) — '''[[пусмопря сапоньундокс]]'''<ref name="Русско-эрзянский ботанический"/>
 
 Кода сёрмады ''The Plant List'' (2013), буесэнть 152 видт<ref name="TPL">{{cite web|url=http://www.theplantlist.org/1.1/browse/A/Caryophyllaceae/Gypsophila/|title=''Gypsophila''|publisher=[[The Plant List]]. Version 1.1.|date=2013|lang=en|accessdate=2016-08-04}}</ref>, кой-конат эйстэст:
@@ -46,10 +46,7 @@
 * ({{Lang-la|Gypsophila sericea}}, {{Lang-ru|Качим шелковистый}}) 
 * ({{Lang-la|Gypsophila silenoides}}, {{Lang-ru|Качим смолёвковидный}}) 
 * ({{Lang-la|Gypsophila tenuifolia}}, {{Lang-ru|Качим узколистный}}) 
-* ({{Lang-la|Gypsophila uralensis}}, {{Lang-ru|Качим уральский}}) 
-
-
-
+* ({{Lang-la|Gypsophila uralensis}}, {{Lang-ru|Качим уральский}})
 
 == Фотокувт== 
 <gallery>
