--- a/Сэнь.mw
+++ b/Сэнь.mw
@@ -1,3 +1,12 @@
-'''Сэнь''' — те тюс.
+[[Артовкс:Синий цвет 2014-03-15 18-47.jpg|thumbnail|Сэнь тюс]]
+'''Сэнь''' — те тюс. Спектральной сэнь тюсось неяви ломанентень 440—485 [[нонометра|нм]] кувалмосо электромангитэнь сравтомасо. Тюсонть сулейксенть ютксо явовить колмо: циан ([[сэнь-пиже]]), ультрамарин ды [[лазурь]].
+
+===  Тикшеть ды ракшат ===
+[[Артовкс:Centaurea cyanus flowers.jpg|thumb|[[Сэнь пря цеця]]]]
+* ({{Lang-la|Centauréa cyánus}}, {{Lang-ru|Василёк синий}}) — '''[[Сэнь пря цеця]]'''<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>
+* [[Сэнь кит]]
+
+==Лисьм.:==
+<references />
 
 [[Категория:Тюст|С]]
