*Empty MediaWiki Message*

--- a/Сэнь.mw
+++ b/Сэнь.mw
@@ -1,5 +1,5 @@
 [[Артовкс:Синий цвет 2014-03-15 18-47.jpg|thumbnail|Сэнь тюс]]
-'''Сэнь''' — те тюс. Спектральной сэнь тюсось неяви ломанентень 440—485 [[нонометра|нм]] кувалмосо электромангитэнь сравтомасо. Тюсонть сулейксенть ютксо явовить колмо: циан ([[сэнь-пиже]]), ультрамарин ды [[лазурь]].
+'''Сэнь''' — те [[тюс]]. Спектральной сэнь тюсось неяви ломанентень 440—485 [[нонометра|нм]] кувалмосо электромангитэнь сравтомасо. Тюсонть сулейксенть ютксо явовить колмо: циан ([[сэнь-пиже]]), ультрамарин ды [[лазурь]].
 
 ===  Тикшеть ды ракшат ===
 [[Артовкс:Centaurea cyanus flowers.jpg|thumb|[[Сэнь пря цеця]]]]
