*Empty MediaWiki Message*

--- a/«Ойме»_морамо-седямо_кужо.mw
+++ b/«Ойме»_морамо-седямо_кужо.mw
@@ -52,8 +52,9 @@ OYME girls.jpg|Ивана Купала морамо фестивальсэнть
 OYME.IMG 7073.JPG|Tallinn Music Week, 2015
 </gallery>
 
-== Сёрм.: ==
+== Кунсоломат ==
 *[https://soundcloud.com/oymeexpeditions/muran-syulgamo-darya-baba-babine-oymeexpeditions OYMEexpeditions: erzya folk song «Darya-babine» Syulgamo] (кунсолома){{ref-myv}}
+==Лисьм.:==
 <references /> 
 
 [[Category:Культура]]
