--- a/Чаво_таркань_сапоньундокс.mw
+++ b/Чаво_таркань_сапоньундокс.mw
@@ -18,7 +18,7 @@
 }}
 '''Чаво таркань сапоньундокс<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}},{{ref-myv}}</ref>''' ({{Lang-la|Gypsóphila murális}}, {{Lang-ru|''Качи́м посте́нный'', ''Качим степной'', ''гипсофила постенная''}}) — вишкинька, вейкеиень [[тикше]]нь касовкс,  Сапоньундокс буень (''Gypsophila''), Гвоздикань семиянь (''Caryophyllaceae''). Кой-кить явовтыть башка (''Psammophiliella'') буес.
 
-Вечки касомо панжадо чувар паксява ды чаво таркава.
+Вечки касомо панжадо чувар паксява ды чаво таркава, ды ловови а изнявиця [[пакся тикше]]кс. 
 == Тикшень лемтне ==
 * ({{Lang-la|Gypsophila L.}}, {{Lang-ru|Качим}}) — '''[[сапоньундокс]]'''<ref name="Русско-эрзянский ботанический"/>
 * ({{Lang-la|[[Gypsophila paniculata]]}}, {{Lang-ru|Качим метельчатый}}) — '''[[пусмопря сапоньундокс]]'''<ref name="Русско-эрзянский ботанический"/>
@@ -33,5 +33,6 @@ Image:Gypsophila serotina Hayne - Flora regni Borussici vol. 3 - t. 215 (clean).
 
 ==Лисьм.:==
 <references />
-
+[[Категория:Биология|Ч]]
 [[Категория:Тикшеть|Ч]]
+[[Категория:Пакся тикшеть‎|Ч]]
