чадыковонь _  ды Трамп_витниять

--- a/АВШ_прявттнень_лововкс.mw
+++ b/АВШ_прявттнень_лововкс.mw
@@ -94,7 +94,7 @@
 |[[File:William_Henry_Harrison_by_James_Reid_Lambdin,_1835.jpg|100px]]
 |Гарисононь Вилё Генрё
 |[[эйзюрковонь 4 чи]] [[1841]]
-|[[чарыковонь 4 чи]] [[1841]]<ref name="кулось">Кулось службасо</ref>
+|[[чадыковонь 4 чи]] [[1841]]<ref name="кулось">Кулось службасо</ref>
 |Вигтнень пеле
 |Тайлерэнь Ива
 |31 чить
@@ -158,7 +158,7 @@
 |[[File:Abraham_Lincoln_by_George_Peter_Alexander_Healy.jpg|100px]]
 |Линкольнонь Обран
 |[[эйзюрковонь 4 чи]] [[1861]]
-|[[чарыковонь 15 чи]] [[1865]]<ref name="маштонь">Маштонь</ref>
+|[[чадыковонь 15 чи]] [[1865]]<ref name="маштонь">Маштонь</ref>
 |Вейсветямонь пеле<br />Раськень содкс<ref name="раськень содкс">Линкольнонь Обран ды Джонсононь Андю 1864 иесэ кочкавсь кода Раськень содкс пелень ялгат</ref>
 | style="background:#FFFFFF; padding: 0px"|
 {| class="standard" width="100%"
@@ -171,7 +171,7 @@
 |'''17'''
 |[[File:aj17.gif|100px]]
 |Джонсононь Андю
-|[[чарыковонь 15 чи]] [[1865]]
+|[[чадыковонь 15 чи]] [[1865]]
 |[[эйзюрковонь 4 чи]] [[1869]]
 |Раськязорчинь пеле<br />Раськень содкс<ref name="раськень содкс"/>
 |''арась''
@@ -315,7 +315,7 @@
 |'''33'''
 |[[File:Harry S. Truman.jpg|100px]]
 |Трумэнэнь Гарё
-|[[чарыковонь 12 чи]] [[1945]]
+|[[чадыковонь 12 чи]] [[1945]]
 |[[якшамковонь 20 чи]] [[1953]]
 |Раськязорчинь пеле
 | ''няма'' <br />Барклиэнь Олбен
@@ -415,12 +415,22 @@
 |[[File:Official portrait of Barack Obama.jpg|100px]]
 |[[Обамань Барак]]
 |[[якшамковонь 20 чи]] [[2009]]
-|'''Тейниця<br />Прявт'''<br /><small>тев-ютко прядовы<br />[[якшамковонь 20 чи]]сэ [[2017]] </small>
+|'''Тейниця<br />Прявт'''<br /><small>тев-ютко прядовы<br />[[якшамковонь 20 чи]]сэ [[2017 ие|2017]] </small>
 |Раськязорчинь пеле
 |Байдэнэнь Джо
+|- bgcolor = #FFB6B6
+|'''45'''
+|[[File:Donald Trump, October 2016 by Gage Skidmore (cropped).jpg|100px]]
+|Трампонь Дональд Джон 
+|[[якшамковонь 20 чи]] [[2017 ие|2017]]
+|[[якшамковонь 20 чи]] [[2025]]
+|Вейсветямонь пеле
+|
 |<span style="display:none">{{Days between|20|1|2009}}</span>
 |}
 
-'''Кандомкат:'''
+==Лисьм.:==
+<references />
+
 
 [[Категория:АВШ прявтт]]
