--- a/Стрип,_Мерил.mw
+++ b/Стрип,_Мерил.mw
@@ -20,7 +20,7 @@
  |эйкакшонзо           = 
  |казнеть ды медальть  = {{{!}}
 {{!}}{{Президентская медаль Свободы}}{{!!}}{{Командор ордена искусств и литературы}}
-{{!}}}«[[Оскар]]» (1980, 1983, 2012)<br>«[[Эмми]]» (1978, 2003)<br>«[[BAFTA]]» (1982, 2012)<br>«[[Сырнень глобус]]» (1980, 1982, 1983, 2003, 2004, 2007, 2010, 2012, 2017)<br>«[[Премия Гильдии киноактёров США]]» (2003, 2008)<br>«[[Сезар]]» (2003)<br>[[Приз за лучшую женскую роль (Каннский кинофестиваль)|Приз за лучшую женскую роль Каннского кинофестиваля]] (1989)<br>{{Сиянь офто}} [[Берлинэнь кинофестиваль|Берлинэнь кинофестиваленть]] (2003)
+{{!}}}«[[Оскар]]» (1980, 1983, 2012)<br>«[[Эмми]]» (1978, 2003)<br>«[[BAFTA]]» (1982, 2012)<br>«[[Сырнень глобус]]» (1980, 1982, 1983, 2003, 2004, 2007, 2010, 2012, 2017)<br>«[[Премия Гильдии киноактёров США]]» (2003, 2008)<br>«[[Сезар]]» (2003)<br>[[Приз за лучшую женскую роль (Каннский кинофестиваль)|Приз за лучшую женскую роль Каннского кинофестиваля]] (1989)<br>[[Сиянь овто]] [[Берлинэнь кинофестиваль|Берлинэнь кинофестиваленть]] (2003)
  |автограф             = Meryl Streep Signature.svg
  |вальма                = [http://merylstreeponline.net]
  |википурнавкс         = Meryl_Streep
