--- a/Стрип,_Мерил.mw
+++ b/Стрип,_Мерил.mw
@@ -6,7 +6,7 @@
  |артовкс            = Meryl Streep February 2016.jpg
  |артовксонть покшолмазо   = 
  |артовксонть эйсте = Мерил Стрип 2016 иестэ
- |важодема ёрокчизе     = [[актриса]], [[продюсер]]
+ |важодема ёрокчизе     = [[налксиця]], [[продюсер]]
  |чачома чись          = 22.06.1949
  |чачома тарка         = {{ЧачомаТарка|Саммит}}, {{ЧачомаТарка|Юнион}}, {{ЧачомаТарка|Американь Вейтьсэндявкс Штаттнэ}} 
  |гражданчи            = {{Масторкоцт|Американь Вейтьсэндявкс Штаттнэ}}
@@ -20,12 +20,12 @@
  |эйкакшонзо           = 
  |казнеть ды медальть  = {{{!}}
 {{!}}{{Президентская медаль Свободы}}{{!!}}{{Командор ордена искусств и литературы}}
-{{!}}}«[[Оскар]]» (1980, 1983, 2012)<br>«[[Эмми]]» (1978, 2003)<br>«[[BAFTA]]» (1982, 2012)<br>«[[Сырнень глобус]]» (1980, 1982, 1983, 2003, 2004, 2007, 2010, 2012, 2017)<br>«[[Премия Гильдии киноактёров США]]» (2003, 2008)<br>«[[Сезар]]» (2003)<br>[[Приз за лучшую женскую роль (Каннский кинофестиваль)|Приз за лучшую женскую роль Каннского кинофестиваля]] (1989)<br>[[Сиянь овто]] [[Берлинэнь кинофестиваль|Берлинэнь кинофестиваленть]] (2003)
+{{!}}}«[[Оскар]]» (1980, 1983, 2012)<br>«[[Эмми]]» (1978, 2003)<br>«[[BAFTA]]» (1982, 2012)<br>«[[Сырнень глобус]]» (1980, 1982, 1983, 2003, 2004, 2007, 2010, 2012, 2017)<br>«[[Премия Гильдии киноактёров США]]» (2003, 2008)<br>«[[Сезар]]» (2003)<br>[[Приз за лучшую женскую роль (Каннский кинофестиваль)|Приз за лучшую женскую роль Каннского кинофестиваля]] (1989)<br>{{Сиянь офто}} [[Берлинэнь кинофестиваль|Берлинэнь кинофестиваленть]] (2003)
  |автограф             = Meryl Streep Signature.svg
  |вальма                = [http://merylstreeponline.net]
  |википурнавкс         = Meryl_Streep
 }}
-'''Мерил Стрип''' ({{lang-en|Mary Louise «Meryl» Streep}}, ({{lang-ru|Мэ́ри Луи́з (Ме́рил) Стрип}}) — [[Американь Вейтьсэндявкс Штаттнэ]]нь театрань, кинонь, теленевтемань актриса, продюсер. Неень шкань иненалксиця.
+'''Мерил Стрип''' ({{lang-en|Mary Louise «Meryl» Streep}}, ({{lang-ru|Мэ́ри Луи́з (Ме́рил) Стрип}}) — [[Американь Вейтьсэндявкс Штаттнэ]]нь театрань, кинонь, теленевтемань налксиця, продюсер. Неень шкань иненалксиця.
 
 Мерил Стрип ушодызеть эсинзэ актёронь шкинеманзо театрасо; 1971 иестэ сон налксесь Тирсо де Молинань ({{нп3|{{lang-ru|«Севильский обольститель»}})|||The Trickster of Seville and the Stone Guest}}) спектаклясо. Васенцеде киносо сон лись 1977 иестэ «Джулия» мелодрамасо (режиссёрось Фред Циннеманн). 
 
@@ -44,5 +44,7 @@
 * «Кшнинь леди» ({{lang-en|The Iron Lady}}, ({{lang-ru|«Железная леди»}}) ([[2011]]).
 
 
+==Лисьм.:==
+<references />
 [[Категория:Ломанть]]
 [[Category:Американь Вейтьсэндявкс Штаттнэнь масторонть ломанть|С]]
