--- a/Саран_ош.mw
+++ b/Саран_ош.mw
@@ -87,6 +87,13 @@
 
 ==Ошонть эрямозо==
 
+== Фотокувт== 
+<gallery>
+Артовкс:Mordovia National Drama Theatre in Saransk.jpg|thumb|left|273px|Раськень Драмань Театра Мордовиясо
+</gallery>
+
+
+
 == Лисьм.: ==
 <references />
 
