--- a/Потма_(Пейкужо_буе).mw
+++ b/Потма_(Пейкужо_буе).mw
@@ -65,7 +65,14 @@
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
 == Веленть эрямозо  ==
-== Сёрм.: ==
+
+
+== Фотокувт== 
+<gallery>
+Артовкс:Pot'ma.jpg|thumb|left|273px|Чугункань станциянть кудось
+</gallery>
+
+== Лисьм.: ==
 <references />
 
 
