*Empty MediaWiki Message*

--- a/Братислава_ош.mw
+++ b/Братислава_ош.mw
@@ -2,7 +2,7 @@
  |статус                  = Ош
  |Эрзянь лем              = Братислава
  |оригинальное название   = {{lang-sk|Bratislava}}
- |изображение             = Bratislava Panorama 01.jpg
+ |изображение             = Bratislava Panorama R01.jpg
  |подчинение              = 
  |мастор                  = Словакия Мастор
  |герб                    = Coat of Arms of Bratislava.svg
