--- a/Вастаньчи.mw
+++ b/Вастаньчи.mw
@@ -1,9 +1,13 @@
-'''Ва́станьчи''' — [[Тарго|таргонь]] [[2 (кавто)|омбоце]] [[Чи|чись]], те [[Ава|авань]] чи. Вастаньчистэнть кудазоравась лездынцянзо марто ушодыль таргонь кудоютконь топавтома тевтнень. Те чистэнть сеедьстэ якильть [[Урьва|урьвань]] чиявтомо. Лиякс мерить ''овторник''. 
+'''Ва́станьчи''' — [[Тарго|таргонь]] [[2 (кавто)|омбоце]] [[Чи (шкань вал)|чись]], кона ашти [[атяньчи]]нть ды [[куншкачи]]нть ютксо. Омбомасторонь [[ISO 8601]] стандартонть коряс, те — [[омбоце]] таргонь чи, ансяк кой-кона койтнесэ [[колмо]]це.
 
+Эрзянь койсэ те [[Ава|авань]] чи. Вастаньчистэнть кудазоравась лездынцянзо марто ушодыль таргонь кудоютконь топавтома тевтнень. Те чистэнть сеедьстэ якильть [[Урьва|урьвань]] [[Ладямо|чиявтомо]]. Лиякс мерить ''овторник''. 
+
+== Этимологиязо ==
 Вастаньчи валось тееви [[2 (кавто)|кавто]] валсто: ''"вастома"'' ды ''"[[Чи (шкань вал)|чи]]"'' валтнэнь эйстэ. 
+[[Армянонь кель|Армянонь]] ({{lang-hy|Երեքշաբթի}} — ''ерекшабти́''), [[Грузинэнь кель|грузинэнь]] ({{lang-ka|სამშაბათი}} — ''самшабати''), [[Башкирэнь кель|башкирэнь]] (''шишәмбе''), [[Таджикэнь кель|таджикэнь]] (''сешанбе'') ды [[Печкасонь кель|печкасонь]] (''сишәмбе'') кельтнестэ те валось ютавтови кода «колмоце (чи) шлямочистэ саезь» ({{lang-ru|«три (дня) от субботы»}}).
 
-
-
+== Лисьм.: ==
+<references />
 
 {{Таргонь чить}}
 
