неень шкань АВШ прявтветиесь Трамп

--- a/АВШ_прявттнень_лововкс.mw
+++ b/АВШ_прявттнень_лововкс.mw
@@ -415,16 +415,18 @@
 |[[File:Official portrait of Barack Obama.jpg|100px]]
 |[[Обамань Барак]]
 |[[якшамковонь 20 чи]] [[2009]]
-|'''Тейниця<br />Прявт'''<br /><small>тев-ютко прядовы<br />[[якшамковонь 20 чи]]сэ [[2017 ие|2017]] </small>
+|[[якшамковонь 20 чи]]сэ [[2017 ие|2017]] </small>
 |Раськязорчинь пеле
 |Байдэнэнь Джо
+|2922 чить
 |- bgcolor = #FFB6B6
 |'''45'''
 |[[File:Donald Trump, October 2016 by Gage Skidmore (cropped).jpg|100px]]
 |Трампонь Дональд Джон 
 |[[якшамковонь 20 чи]] [[2017 ие|2017]]
-|[[якшамковонь 20 чи]] [[2025]]
+|'''Тевветиця<br />Прявт,'''<br /><small>тев-юткозо прядовы<br />[[якшамковонь 20 чи]] [[2025]]
 |Вейсветямонь пеле
+|Майк Пенс
 |
 |<span style="display:none">{{Days between|20|1|2009}}</span>
 |}
