--- a/1946_ие.mw
+++ b/1946_ие.mw
@@ -4,7 +4,7 @@
 == Мезе ульнесь те иестенть ==
 
 == Чачсть ==
-
+* [[Трамп, Дональд|Трампонь Дональд Джон]] ([[аштемковонь 14 чи]]стэ) — [[Американь Вейтьсэндявкс Штаттнэ]]нь 45-це президенть.
 == Кулость ==
 
 
