*Empty MediaWiki Message*

--- a/Аштемковонь_14_чи.mw
+++ b/Аштемковонь_14_чи.mw
@@ -7,16 +7,16 @@
 |EndNote=<small>[[{{CURRENTYEAR}} ие]]</small>
 }}
 == Покшчить ==
-''Вн. истяжо: [[:Категория:Покшчить аштемковонь 14]]''
+''Вн. истяжо: [[:Категория:Покшчить аштемковонь 14 чи]]''
 
 == Мезе ульнесь ==
-''Вн. истяжо: [[:Категория:Мезе ульнесь аштемковонь 14]]''
+''Вн. истяжо: [[:Категория:Мезе ульнесь аштемковонь 14 чи]]''
 
 == Чачсть ==
-''Вн. истяжо: [[:Категория:Чачозь аштемковонь 14]]''
+''Вн. истяжо: [[:Категория:Чачозь аштемковонь 14 чи]]''
 
 == Кулость ==
-''Вн. истяжо: [[:Категория:Кулозь аштемковонь 14]]''
+''Вн. истяжо: [[:Категория:Кулозь аштемковонь 14 чи]]''
 
 {{commons|June 14|аштемковонь 14 чи}}
 
