Category_Англакс кортыцят

--- a/Трамп,_Дональд.mw
+++ b/Трамп,_Дональд.mw
@@ -27,5 +27,6 @@
 Чачсь Трампонь Дональд 1946 иень аштемковонь 14 чисте  [[Джамейка (Куинс)|Джамейка буесэ]] [[Нью-Йорк ош]]со.
 
 
-[[Категория:Ломанть]]
+[[Category:Ломанть]]
 [[Category:Американь Вейтьсэндявкс Штаттнэнь масторонть ломанть|Т]]
+[[Category:Англакс кортыцят|Т]]
