--- a/Ашо.mw
+++ b/Ашо.mw
@@ -1,7 +1,7 @@
 '''А́шо''' — те ахроматической [[Тюс|тюссось]] (вейкетьстэ [[раужо]] ды ашна-раужо тюсснень марто). 
 
-
-Пазонь кучовт ашо [[карциган]].
+==Содамоёвкст==
+* [[Пазт|Пазонь]] кучовт ашо [[карциган]].
 
 == Сёрм.: ==
 * Мордовский словарь Х. Паасонена, том II (К-М), Хельсинки 1992: 919;
