--- a/Ашо.mw
+++ b/Ашо.mw
@@ -5,6 +5,8 @@
 
 == Сёрм.: ==
 * Мордовский словарь Х. Паасонена, том II (К-М), Хельсинки 1992: 919;
+== Лисьм.: ==
+<references />
 {{stub}}
 
 [[Категория:Тюст|А]]
