--- a/Раужо.mw
+++ b/Раужо.mw
@@ -1,3 +1,8 @@
-'''Ра́ужо''' — те тюс, конань лемдить ахроматическоекс, видесте — арасьчи валдонь молема (потоконть) саезь путовкстонть. RGB-се сон тешкстави-сёрмадови кода #000000. Раужо тюсонть сулейтюссозо лемдявить ашна-раужо тюсокс.
+'''Ра́ужо''' — те [[тюс]], конань лемдить ахроматическоекс, видесте — арасьчи валдонь молема (потоконть) саезь путовкстонть. 
 
+RGB-се сон тешкстави-сёрмадови кода #000000. Раужо тюсонть сулейтюссозо лемдявить ашна-раужо тюсокс.
+
+== Лисьм.: ==
+<references />
+{{stub}}
 [[Категория:Тюст|Р]]
