*Empty MediaWiki Message*

--- a/Ицял_буе.mw
+++ b/Ицял_буе.mw
@@ -157,8 +157,8 @@
 човорязь велеть:
 * [[Камайвеле (Ицял буе)|Камайвеле]] — ({{lang-ru|Камаево}}) (рузонь-эрзянь веле)
 * [[Ташкино (Ицял буе)|Ташкино]] - (рузонь-эрзянь веле)
-
-
+== Лисьм.==
+<references />
 
 {{Мордовиянь буетне}}
 
